updated number-field to have value controls

--- a/demo/number-field.html
+++ b/demo/number-field.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
@@ -21,6 +22,21 @@
         <vaadin-number-field></vaadin-number-field>
       </template>
     </demo-snippet>
+
+    <h3>Number Field with controls</h3>
+    <demo-snippet>
+      <template>
+        <vaadin-number-field has-controls></vaadin-number-field>
+      </template>
+    </demo-snippet>
+    
+    <h3>Number Field with value limits</h3>
+    <demo-snippet>
+      <template>
+        <vaadin-number-field value="1" min="1" max="10" has-controls></vaadin-number-field>
+      </template>
+    </demo-snippet>
   </div>
 </body>
+
 </html>
