--- a/test/index.html
+++ b/test/index.html
@@ -15,6 +15,7 @@
     WCT.loadSuites([
       'text-field.html',
       'password-field.html',
+      'number-field.html',
       'validation.html',
       'accessibility.html'
     ].reduce(function(suites, suite) {
