--- a/test/performance/index.html
+++ b/test/performance/index.html
@@ -6,9 +6,11 @@
   <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
   <link rel="import" href="../../vaadin-text-field.html">
   <link rel="import" href="../../vaadin-password-field.html">
+  <link rel="import" href="../../vaadin-number-field.html">
 </head>
 
 <body>
   <vaadin-text-field placeholder="Username"></vaadin-text-field>
   <vaadin-password-field placeholder="Password"></vaadin-password-field>
+  <vaadin-number-field placeholder="Number"></vaadin-number-field>
 </body>
