--- a/demo/number-field.html
+++ b/demo/number-field.html
@@ -1,9 +1,9 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
   <title>vaadin-number-field Basic Examples</title>
