updated password-field default theme to improve eye-button clickability

--- a/vaadin-password-field.html
+++ b/vaadin-password-field.html
@@ -20,8 +20,27 @@ This program is available under Apache License Version 2.0, available at https:/
 <dom-module id="vaadin-password-field-default-theme">
   <template>
     <style>
+      [part="input-field"] {
+        align-items: stretch;
+        padding: 0;
+      }
+
+      [part="value"] {
+        margin: 0.25em;
+      }
+
+      [part="input-field"] ::slotted([slot="prefix"]),
+      [part="input-field"] ::slotted([slot="suffix"]) {
+        padding: 0;
+        margin: 0.25em;
+      }
+
       [part="toggle-button"] {
         cursor: pointer;
+        display: inline-flex;
+        justify-content: center;
+        align-items: center;
+        width: 30px;
       }
     </style>
   </template>
