--- a/test/validation.html
+++ b/test/validation.html
@@ -28,16 +28,17 @@
 
       beforeEach(function(done) {
         iform = fixture('default');
-        window.setTimeout(function() {
-          tf = iform.querySelector('vaadin-text-field');
-          done();
-        }, 1);
+        tf = iform.querySelector('vaadin-text-field');
+        animationFrameFlush(done);
       });
+
 
       it('should call validate', function() {
         const inputFocusSpy = window.sinon.spy(tf, 'validate');
         iform.submit();
-        expect(inputFocusSpy.called).to.be.true;
+        setTimeout(function() {
+          expect(inputFocusSpy.called).to.be.true;
+        }, 0);
       });
 
       it('should serialize correctly', function() {
