removed themable mixin

--- a/vaadin-password-field.html
+++ b/vaadin-password-field.html
@@ -100,7 +100,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
       let memoizedTemplate;
 
-      class PasswordFieldElement extends Vaadin.ThemableMixin(Vaadin.TextFieldElement) {
+      class PasswordFieldElement extends Vaadin.TextFieldElement {
         static get is() {
           return 'vaadin-password-field';
         }
