removed themable mixin

--- a/vaadin-number-field.html
+++ b/vaadin-number-field.html
@@ -86,7 +86,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
       let memoizedTemplate;
 
-      class NumberFieldElement extends Vaadin.ThemableMixin(Vaadin.TextFieldElement) {
+      class NumberFieldElement extends Vaadin.TextFieldElement {
         static get is() {
           return 'vaadin-number-field';
         }
