renamed 'toggle' to 'reveal'

--- a/test/password-field.html
+++ b/test/password-field.html
@@ -20,12 +20,12 @@
   <script>
 
     describe('password-field', function() {
-      var passwordField, input, toggleButton;
+      var passwordField, input, revealButton;
 
       beforeEach(function() {
         passwordField = fixture('default');
         input = passwordField.$.input;
-        toggleButton = passwordField.root.querySelector('[part=toggle-button]');
+        revealButton = passwordField.root.querySelector('[part=reveal-button]');
       });
 
       describe('native', function() {
@@ -34,20 +34,20 @@
         });
 
         it('should toggle type on click on eye-icons', function() {
-          toggleButton.click();
+          revealButton.click();
           expect(input.type).to.equal('text');
 
-          toggleButton.click();
+          revealButton.click();
           expect(input.type).to.equal('password');
         });
       });
 
       describe('eye-icons', function() {
-        it('should hide eye-icon when hideToggleButton is set to true', function() {
-          expect(toggleButton.hidden).to.be.false;
+        it('should hide eye-icon when hideRevealButton is set to true', function() {
+          expect(revealButton.hidden).to.be.false;
 
-          passwordField.hideToggleButton = true;
-          expect(toggleButton.hidden).to.be.true;
+          passwordField.hideRevealButton = true;
+          expect(revealButton.hidden).to.be.true;
         });
       });
 
