--- a/demo/password.html
+++ b/demo/password.html
@@ -27,7 +27,7 @@
     <h3>Password Field with Hidden Eye Icon</h3>
     <demo-snippet>
       <template>
-        <vaadin-password-field placeholder="Password" hide-toggle-button></vaadin-password-field>
+        <vaadin-password-field placeholder="Password" hide-reveal-button></vaadin-password-field>
       </template>
     </demo-snippet>
 
