--- a/vaadin-password-field.html
+++ b/vaadin-password-field.html
@@ -35,12 +35,12 @@ This program is available under Apache License Version 2.0, available at https:/
         margin: 0.25em;
       }
 
-      [part="toggle-button"] {
+      [part="reveal-button"]:not([hidden]) {
         cursor: pointer;
         display: inline-flex;
         justify-content: center;
         align-items: center;
-        width: 30px;
+        width: 2em;
       }
     </style>
   </template>
@@ -49,15 +49,15 @@ This program is available under Apache License Version 2.0, available at https:/
 <dom-module id="vaadin-password-field-template">
   <template>
     <style>
-      [part="toggle-button"] {
+      [part="reveal-button"] {
         font-family: 'vaadin-password-field-icons';
       }
 
-      [part="toggle-button"]::before {
+      [part="reveal-button"]::before {
         content: "\e900";
       }
 
-      :host([password-visible]) [part="toggle-button"]::before {
+      :host([password-visible]) [part="reveal-button"]::before {
         content: "\e901";
       }
 
@@ -68,9 +68,9 @@ This program is available under Apache License Version 2.0, available at https:/
     </style>
 
     <div
-      part="toggle-button"
+      part="reveal-button"
       on-click="_togglePasswordVisibility"
-      hidden$="[[hideToggleButton]]">
+      hidden$="[[hideRevealButton]]">
     </div>
   </template>
   <script>
@@ -91,7 +91,7 @@ This program is available under Apache License Version 2.0, available at https:/
        *
        * Part name       | Description
        * ----------------|----------------------------------------------------
-       * `toggle-button` | The eye icon which toggles the password visibility
+       * `reveal-button` | The eye icon which toggles the password visibility
        *
        * @memberof Vaadin
        * @extends Vaadin.TextFieldElement
@@ -110,7 +110,7 @@ This program is available under Apache License Version 2.0, available at https:/
             /**
              * Set to true to hide the eye icon which toggles the password visibility.
              */
-            hideToggleButton: {
+            hideRevealButton: {
               type: Boolean,
               value: false
             },
@@ -134,12 +134,12 @@ This program is available under Apache License Version 2.0, available at https:/
 
             // Retrieve this element's dom-module template
             const thisTemplate = Polymer.DomModule.import(this.is + '-template', 'template');
-            const toggleButton = thisTemplate.content.querySelector('[part="toggle-button"]');
+            const revealButton = thisTemplate.content.querySelector('[part="reveal-button"]');
             const styles = thisTemplate.content.querySelector('style');
 
-            // Append toggle-button and styles to the text-field template
+            // Append reveal-button and styles to the text-field template
             const inputField = memoizedTemplate.content.querySelector('[part="input-field"]');
-            inputField.appendChild(toggleButton);
+            inputField.appendChild(revealButton);
             memoizedTemplate.content.appendChild(styles);
           }
 
