--- a/test/password-field.html
+++ b/test/password-field.html
@@ -33,7 +33,7 @@
           expect(input.type).to.equal('password');
         });
 
-        it('should reveal password on click on eye-icons', function() {
+        it('should reveal the password on click on eye-icons', function() {
           revealButton.click();
           expect(input.type).to.equal('text');
 
@@ -43,7 +43,7 @@
 
         it('should hide the password on blur', function() {
           passwordField.focus();
-          toggleButton.click();
+          revealButton.click();
           expect(input.type).to.equal('text');
 
           passwordField.dispatchEvent(new Event('blur'));
