--- a/vaadin-password-field.html
+++ b/vaadin-password-field.html
@@ -75,7 +75,7 @@ This program is available under Apache License Version 2.0, available at https:/
        *
        * @memberof Vaadin
        * @extends Vaadin.TextFieldElement
-       * @demo demo/index.html
+       * @demo demo/password.html
        */
 
       let memoizedTemplate;
