Add 'list of all styling parts' link

--- a/demo/styling.html
+++ b/demo/styling.html
@@ -25,6 +25,12 @@
       To stay on a safe side, only apply custom styles to either the element
       itself (<code>:host</code>) or the exposed shadow parts (<code>[part~="name"]</code>).
     </p>
+
+    <p>
+      <a href="../#/elements/vaadin-text-field#description" target="_parent">
+        <strong>List of all styling parts ↗</strong>
+      </a>
+    </p>
     <p>
       <b>NOTE: The custom style module must be defined/imported before the element
       it targets.</b>
