--- a/vaadin-text-field.html
+++ b/vaadin-text-field.html
@@ -337,11 +337,7 @@ This program is available under Apache License Version 2.0, available at https:/
         }
 
         _valueChanged(newVal, oldVal) {
-          // setting initial value to empty string, skip validation
-          if (newVal === '' && oldVal === undefined) {
-            return;
-          }
-          if (this.invalid) {
+          if (!(newVal === '' && oldVal === undefined) && this.invalid) {
             this.validate();
           }
           this._setHasValue(newVal !== '' && newVal != null);
