--- a/test/text-field.html
+++ b/test/text-field.html
@@ -121,7 +121,7 @@
         describe('label', function() {
           it('should focus the internal input on click', function() {
             const label = textField.root.querySelector('[part="label"]');
-            label.click();
+            label.dispatchEvent(new CustomEvent('mousedown', {bubbles: true, composed: true}));
             expect(textField.focused).to.be.true;
           });
 
