Fix visual tests, fail build if visual tests are fialing

--- a/test/visual/vaadin-password-field/password-field.html
+++ b/test/visual/vaadin-password-field/password-field.html
@@ -3,14 +3,14 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title></title>
-  <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link href="../../vaadin-password-field.html" rel="import">
-  <link href="./common.html" rel="import">
+  <script src="../../../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link href="../../../vaadin-password-field.html" rel="import">
+  <link href="../common.html" rel="import">
 </head>
 
 <body>
 
-  <fieldset id="password">
+  <fieldset id="password-field">
     <p>
     <vaadin-password-field placeholder="Password"></vaadin-password-field>
     <p>
