--- a/test/visual/vaadin-text-field/rtl.html
+++ b/test/visual/vaadin-text-field/rtl.html
@@ -3,10 +3,10 @@
 <head lang="ar">
   <meta charset="UTF-8">
   <title></title>
-  <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link href="../../vaadin-text-field.html" rel="import">
-  <link href="../../vaadin-password-field.html" rel="import">
-  <link href="./common.html" rel="import">
+  <script src="../../../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link href="../../../vaadin-text-field.html" rel="import">
+  <link href="../../../vaadin-password-field.html" rel="import">
+  <link href="../common.html" rel="import">
 </head>
 
 <body>
@@ -18,8 +18,6 @@
       <span slot="prefix">اختصار</span>
       <span slot="suffix">لاحقة</span>
     </vaadin-text-field>
-    <p>
-    <vaadin-password-field label="كلمه السر" placeholder="أنشئ كلمة مرور"></vaadin-password-field>
   </fieldset>
 
 </body>
