--- a/test/visual/vaadin-text-field/styling.html
+++ b/test/visual/vaadin-text-field/styling.html
@@ -3,8 +3,8 @@
 <head lang="en">
   <meta charset="UTF-8">
 
-  <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link href="../../vaadin-text-field.html" rel="import">
+  <script src="../../../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link href="../../../vaadin-text-field.html" rel="import">
 </head>
 
 <body>
