--- a/test/visual/vaadin-text-field/text-field.html
+++ b/test/visual/vaadin-text-field/text-field.html
@@ -3,9 +3,9 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title></title>
-  <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
-  <link href="../../vaadin-text-field.html" rel="import">
-  <link href="./common.html" rel="import">
+  <script src="../../../../webcomponentsjs/webcomponents-lite.js"></script>
+  <link href="../../../vaadin-text-field.html" rel="import">
+  <link href="../common.html" rel="import">
 </head>
 
 <body>
@@ -22,7 +22,7 @@
   </custom-style>
 
   <form>
-    <fieldset id="default-tests">
+    <fieldset id="text-field">
       <p>
       default: <vaadin-text-field></vaadin-text-field>
       <p>
