Added documentation for state attributes

--- a/vaadin-password-field.html
+++ b/vaadin-password-field.html
@@ -74,6 +74,12 @@ This program is available under Apache License Version 2.0, available at https:/
        * ----------------|----------------------------------------------------
        * `reveal-button` | The eye icon which toggles the password visibility
        *
+       * In addition to vaadin-text-field state attributes, here's the list of vaadin-password-field specific attributes
+       *
+       * Attribute    | Description | Part name
+       * -------------|-------------|------------
+       * `password-visible` | Set when the password is visible | :host
+       *
        * @memberof Vaadin
        * @extends Vaadin.TextFieldElement
        * @demo demo/password.html
