Prevent mousedown event on reveal-button

--- a/vaadin-password-field.html
+++ b/vaadin-password-field.html
@@ -46,6 +46,7 @@ This program is available under Apache License Version 2.0, available at https:/
 
     <div
       part="reveal-button"
+      on-mousedown="_preventDefault"
       on-click="_togglePasswordVisibility"
       hidden$="[[revealButtonHidden]]">
     </div>
@@ -141,7 +142,11 @@ This program is available under Apache License Version 2.0, available at https:/
           });
         }
 
-        _togglePasswordVisibility() {
+        _preventDefault(e) {
+          e.preventDefault();
+        }
+
+        _togglePasswordVisibility(e) {
           this._setPasswordVisible(!this.passwordVisible);
         }
 
