--- a/test/password-field.html
+++ b/test/password-field.html
@@ -58,6 +58,12 @@
           passwordField.revealButtonHidden = true;
           expect(revealButton.hidden).to.be.true;
         });
+
+        it('should prevent mousedown event on reveal-button', function() {
+          const e = new CustomEvent('mousedown', {bubbles: true, cancelable: true});
+          revealButton.dispatchEvent(e);
+          expect(e.defaultPrevented).to.be.true;
+        });
       });
 
     });
