--- a/vaadin-password-field.html
+++ b/vaadin-password-field.html
@@ -146,7 +146,7 @@ This program is available under Apache License Version 2.0, available at https:/
           e.preventDefault();
         }
 
-        _togglePasswordVisibility(e) {
+        _togglePasswordVisibility() {
           this._setPasswordVisible(!this.passwordVisible);
         }
 
