--- a/vaadin-text-field.html
+++ b/vaadin-text-field.html
@@ -292,7 +292,7 @@ This program is available under Apache License Version 2.0, available at https:/
             },
 
             /**
-             * This property is set to true when the control value invalid.
+             * This property is set to true when the control value is invalid.
              */
             invalid: {
               type: Boolean,
